Implement capabilities for multiple tabbed workspaces

--- a/src/resources/menus/Default.properties
+++ b/src/resources/menus/Default.properties
@@ -2,6 +2,6 @@ Menus=File, Edit, View, Options, Help
 
 File=Load Command, Save Command, Quit
 Edit=Undo, Redo, Cut, Copy, Paste
-View=Choose Background Color, Choose Pen Color
+View=Choose Background Color, Choose Pen Color, Choose Pen Width
 Options=Choose Language, Choose Image
 Help=Show Help
