More fixes. Starting to add ColorPalletPane

--- a/src/resources/menus/Default.properties
+++ b/src/resources/menus/Default.properties
@@ -5,5 +5,5 @@ Menus=File, Edit, View, Options, Help
 File=Load Command, Save Command, Quit
 Edit=Undo, Redo, Cut, Copy, Paste
 View
-Options=Choose Language
+Options
 Help=Show Help
