MenuBar fixes and new DataPane hierarchy

--- a/src/resources/menus/WorkspaceConfig.properties
+++ b/src/resources/menus/WorkspaceConfig.properties
@@ -5,4 +5,4 @@ Menus=View, Options
 View=Choose Background Color, Choose Pen Color, Choose Pen Width
 Options=Choose Image
 
-Params=view.Display
+Params=Display
