add functionality for new workspace to menubar

--- a/src/resources/menus/WorkspaceSetup.properties
+++ b/src/resources/menus/WorkspaceSetup.properties
@@ -1,4 +1,4 @@
 Name = WorkspaceSetup
 Menus = File
 File = New Workspace, Load Preset Workspace
-Params = Display
+Params = Display, WorkspaceCreator
