make historians tabs, implement loading commands

--- a/src/resources/menus/Default.properties
+++ b/src/resources/menus/Default.properties
@@ -2,7 +2,7 @@ Name=Default
 
 Menus=File, Edit, View, Options, Help
 
-File=Load Command, Save Command, Quit
+File=Quit
 Edit=Undo, Redo, Cut, Copy, Paste
 View
 Options
